--- a/GiaCongThienStore/ResourceXAML/MainCSS.xaml
+++ b/GiaCongThienStore/ResourceXAML/MainCSS.xaml
@@ -70,12 +70,12 @@
 
 
     <Style x:Key="HeadingContent">
-        <Setter Property="Control.FontWeight" Value="ExtraBold"></Setter>
-        <Setter Property="Control.Margin" Value="75 50 0 0"></Setter>
+        <Setter Property="Control.FontWeight" Value="Bold"></Setter>
+        <Setter Property="Control.Margin" Value="55 25 0 7"></Setter>
         <Setter Property="Control.Foreground" Value="#0069A5"></Setter>
         <Setter Property="Control.Height" Value="auto"></Setter>
-        <Setter Property="Control.FontFamily" Value="Tahoma"></Setter>
-        <Setter Property="Control.FontSize" Value="27"></Setter>
+        <Setter Property="Control.FontFamily" Value="Arial"></Setter>
+        <Setter Property="Control.FontSize" Value="22"></Setter>
         <Setter Property="Control.VerticalAlignment" Value="Center"></Setter> 
     </Style>
 </ResourceDictionary>
