--- a/GiaCongThienStore/ContentChild/KhoiPhucLoaiSanPham.xaml
+++ b/GiaCongThienStore/ContentChild/KhoiPhucLoaiSanPham.xaml
@@ -1,28 +1,27 @@
-﻿<Window x:Class="GiaCongThienStore.ContentChild.LoaiSanPham"
+﻿<Window x:Class="GiaCongThienStore.ContentChild.KhoiPhucLoaiSanPham"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GiaCongThienStore.ContentChild"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" 
         mc:Ignorable="d"
-        Title="Sản Phẩm"
+        Title="Khôi phục loại sản phẩm"  
+        DataContext="{StaticResource KhoiPhucLoaiSanPhamVM}"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
         TextElement.FontSize="13"
-        DataContext="{StaticResource LoaiSanPhamVM}"
         TextOptions.TextFormattingMode="Ideal"
         TextOptions.TextRenderingMode="Auto"
         FontFamily="{DynamicResource MaterialDesignFont}" 
         Height="768"
         Width="1366"
-        WindowStartupLocation="CenterScreen"
-        Name="LoaiSanPhamWindow"
-        Background="#DCEEFF"> 
+        WindowStartupLocation="CenterScreen" 
+        Background="#DCEEFF"
+        Name="KhoiPhucLSP"> 
     <ScrollViewer VerticalScrollBarVisibility="Auto">
-        <StackPanel>
-
+        <StackPanel> 
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"></RowDefinition>
@@ -33,8 +32,8 @@
                 <Grid Grid.Row="0" Margin="0 25">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="75"></ColumnDefinition>
-                        <ColumnDefinition Width="0.3*"></ColumnDefinition>
-                        <ColumnDefinition Width="900"></ColumnDefinition>
+                        <ColumnDefinition Width="0.3*"></ColumnDefinition> 
+                        <ColumnDefinition Width="0.3*"></ColumnDefinition> 
                     </Grid.ColumnDefinitions>
                     <Grid.Resources>
                         <Style TargetType="Grid">
@@ -64,7 +63,7 @@
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="MouseLeftButtonDown">
                                     <i:InvokeCommandAction Command="{Binding BackCommand}"
-                                                           CommandParameter="{Binding ElementName=LoaiSanPhamWindow}" />
+                                                           CommandParameter="{Binding ElementName=KhoiPhucLSP}" />
                                 </i:EventTrigger>
                             </i:Interaction.Triggers>
                             <Grid.ColumnDefinitions>
@@ -103,28 +102,10 @@
                                        Grid.Column="1"></TextBlock>
                         </Grid>
                         <TextBlock Grid.Row="2"
-                                   Text="Danh mục loại sản phẩm"
+                                   Text="Khôi phục loại sản phẩm"
                                    Style="{StaticResource HeadingContentChild}"></TextBlock>
 
                     </Grid> 
-                    <Grid Grid.Column="2" Margin="700,0,0,0" >
-                        <DockPanel>
-                            <Border Grid.Row="0"
-                                    Width="150"
-                                    Height="50" 
-                                    BorderThickness="0.5"
-                                    BorderBrush="Black"
-                                    Background="White" VerticalAlignment="Top">
-                                <i:Interaction.Triggers>
-                                    <i:EventTrigger EventName="MouseLeftButtonDown">
-                                        <i:InvokeCommandAction Command="{Binding KhoiPhucLoaiSanPhamCommand}"
-                                                   CommandParameter="{Binding ElementName=LoaiSanPhamWindow}"/>
-                                    </i:EventTrigger>
-                                </i:Interaction.Triggers>
-                                <TextBlock Text="Khôi phục loại sản phẩm" Margin="0.333,0.333,19.333,0.333"></TextBlock>
-                            </Border> 
-                        </DockPanel>
-                    </Grid>
                 </Grid> 
                 <Grid Grid.Row="1"
                       Margin="0 25">
@@ -234,22 +215,10 @@
                                                            Foreground="Orange"
                                                            Margin="7 0"
                                                            Grid.Column="1"
-                                                           Text="{Binding ThongBaoImage}"></TextBlock>
-                                                <Button Visibility="{Binding VisibleXoaButton}"
-                                                        IsEnabled="{Binding EnableXoaButton}"
-                                                        Command="{Binding XoaLoaiSanPham}"
-                                                        CommandParameter="{Binding ElementName=CODE}"
-                                                        Grid.Column="2"
-                                                        Opacity="0.7"
-                                                        Foreground="#fff"
-                                                        Background="#23A3FF"
-                                                        BorderBrush="Black"
-                                                        BorderThickness="0.4">
-                                                    Xóa
-                                                </Button>
-                                                <Button Visibility="{Binding VisibleCapNhatButton}"
-                                                        IsEnabled="{Binding EnableCapNhatButton}"
-                                                        Command="{Binding CapNhatLoaiSanPham}"
+                                                           Text="{Binding ThongBaoImage}"></TextBlock> 
+                                                <Button Visibility="{Binding VisibleKhoiPhucButton}"
+                                                        IsEnabled="{Binding EnableKhoiPhucButton}"
+                                                        Command="{Binding KhoiPhucLSPCommand}"
                                                         CommandParameter="{Binding ElementName=CODE}"
                                                         Grid.Column="4"
                                                         Opacity="0.7"
@@ -257,7 +226,7 @@
                                                         Background="#23A3FF"
                                                         BorderBrush="Black"
                                                         BorderThickness="0.4">
-                                                    Cập nhật
+                                                    Khôi phục
                                                 </Button>
                                             </Grid>
                                         </DockPanel>
@@ -333,84 +302,7 @@
                         </StackPanel>
                     </Grid>
                 </Grid>
-            </Grid>
-
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"></RowDefinition>
-                    <RowDefinition Height="auto"></RowDefinition>
-                    <RowDefinition Height="auto"></RowDefinition>
-                    <RowDefinition Height="auto"></RowDefinition>
-                </Grid.RowDefinitions>
-                <Grid Grid.Row="0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="75"></ColumnDefinition>
-                        <ColumnDefinition Width="0.3*"></ColumnDefinition>
-                        <ColumnDefinition Width="0.6*"></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
-                    <Grid.Resources>
-                        <Style TargetType="Grid">
-                            <Setter Property="Height"
-                                    Value="auto"></Setter>
-                            <Setter Property="Width"
-                                    Value="auto"></Setter>
-                            <Setter Property="VerticalAlignment"
-                                    Value="Center"></Setter>
-                            <Setter Property="HorizontalAlignment"
-                                    Value="Left"></Setter>
-                        </Style>
-                    </Grid.Resources>
-                    <Grid Grid.Column="0"></Grid>
-                    <Grid Grid.Column="1">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="30"></RowDefinition>
-                            <RowDefinition Height="auto"></RowDefinition>
-                            <RowDefinition Height="auto"></RowDefinition>
-                        </Grid.RowDefinitions>
-
-                        <Grid Grid.Row="0"></Grid>
-                        <TextBlock Grid.Row="1"
-                                   Text="Lịch sử cập nhật"
-                                   Style="{StaticResource HeadingContentChild}"></TextBlock>
-
-                    </Grid>
-
-                </Grid>
-
-                <Grid Grid.Row="1"
-                      Margin="0 25">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="0.04*"></ColumnDefinition>
-                        <ColumnDefinition Width="0.94*"></ColumnDefinition>
-                        <ColumnDefinition Width="0.04*"></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
-                    <Grid.Resources>
-                        <Style TargetType="Grid">
-                            <Setter Property="Height"
-                                    Value="auto"></Setter>
-                            <Setter Property="Width"
-                                    Value="auto"></Setter>
-                        </Style>
-                    </Grid.Resources>
-                    <Grid  Grid.Column="1">
-                        <materialDesign:Card ToolTip="Log History Loại Sản Phẩm"
-                                             VerticalAlignment="Stretch">
-                            <ScrollViewer VerticalScrollBarVisibility="Auto" MaxHeight="300">
-                                <ListView ItemsSource="{Binding LogHistory}">
-                                    <ListView.View>
-                                        <GridView>
-                                            <GridViewColumn Header="Mã LOG"
-                                                                DisplayMemberBinding="{Binding MLOG}"></GridViewColumn>
-                                            <GridViewColumn Header="Nội dung"
-                                                                DisplayMemberBinding="{Binding CONTENT}"></GridViewColumn>
-                                        </GridView>
-                                    </ListView.View>
-                                </ListView>
-                            </ScrollViewer>
-                        </materialDesign:Card>
-                    </Grid>
-                </Grid>
-            </Grid>
+            </Grid> 
         </StackPanel>
     </ScrollViewer>
 </Window>
